# finetuning

./: .gitignore  README.md  check_setup.py  compare.py  config.yaml  data_preparation.py  dataset_preview.txt  examples.py  inference.py  inspect_dataset.py  inspect_grpo_data.py  main.py  pyproject.toml  requirements.txt  setup.sh  train.py  train_grpo.py
